# purple

./: Makefile  README.md  conftest.py  development  licence.txt  pyproject.toml  readme.md  tox.toml
.github/workflows/: test_all.yml
doc/: initial_values.rst  introduction.rst  reserved_words.rst  union.rst  verification.rst
src/purple/: __init__.py  array.py  bitvector.py  clock.py  common.py  interface.py  leaf.py  metaclass.py  model.py  parameterise.py  port.py  record.py  rule.py  simulator.py  state.py  static_record.py  tuple.py  union.py  verif.py
tests/: README  cli.py  test_array.py
tst/: array_test.py  bitvector_test.py  bomb_test.py  clk_sim_test.py  clock_test.py  frozen_record_test.py  integer_test.py  interface_test.py  model_array_test.py  model_test.py  modulo_test.py  packet_in_packet_test.py  port_test.py  record_test.py  rule_sim_test.py  rule_test.py  smoke_test.py  state_hash_test.py  static_record_test.py  static_union_test.py  tuple_test.py  union_test.py
tst_verif/: cli.py  rob_checker_test.py  rob_implementation_test.py  rob_simple_checker_test.py  rob_simple_impl_test.py  rob_spec_test.py  run.py
