[project]
name = "purple"
description = "Hardware architecture simulation language"
license = "MIT"
readme = "README.md"

dynamic = ["version"]
license-files = ["licence.txt"]
authors = [
    {name = "James Aldis", email = "james.aldis@baysystems.com"},
]
maintainers = [
    {name = "James Aldis", email = "james.aldis@baysystems.com"}
]
requires-python = ">= 3.11, < 3.14"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/purple/__about__.py"

[project.urls]
homepage = "https://github.com/Baya-Systems/purple"
source = "https://github.com/Baya-Systems/purple"
documentation = "TBD" # TODO: https://about.readthedocs.com/
issues = "https://github.com/Baya-Systems/purple/issues"
